my-node-app-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeline-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: timeline-service
  template:
    metadata:
      labels:
        app: timeline-service
    spec:
      containers:
        - name: timeline-service-container
          image: tareqjoy/timeline-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service-container
          image: tareqjoy/user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: follower-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: follower-service
  template:
    metadata:
      labels:
        app: follower-service
    spec:
      containers:
        - name: follower-service-container
          image: tareqjoy/follower-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fanout-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fanout-service
  template:
    metadata:
      labels:
        app: fanout-service
    spec:
      containers:
        - name: fanout-service-container
          image: tareqjoy/fanout-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service-container
          image: tareqjoy/post-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
        - name: search-service-container
          image: tareqjoy/search-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service-container
          image: tareqjoy/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service-container
          image: tareqjoy/frontend-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: timeline-service
spec:
  selector:
    app: timeline-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 5001
      nodePort: 30001
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 5002
      nodePort: 30002
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: follower-service
spec:
  selector:
    app: follower-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 5003
      nodePort: 30003
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: fanout-service
spec:
  selector:
    app: fanout-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 5004
      nodePort: 30004
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post-service
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 5005
      nodePort: 30005
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: search-service
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 5006
      nodePort: 30006
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 3007
      targetPort: 5007
      nodePort: 30007
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 5000
      nodePort: 30000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://192.168.49.2"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
      - http:
          paths:
            - path: /v1/timeline/
              pathType: Prefix
              backend:
                service:
                  name: timeline-service
                  port:
                    number: 3001
            - path: /v1/user/
              pathType: Prefix
              backend:
                service:
                  name: user-service
                  port:
                    number: 3002
            - path: /v1/follower/
              pathType: Prefix
              backend:
                service:
                  name: follower-service
                  port:
                    number: 3003
            - path: /v1/fanout/
              pathType: Prefix
              backend:
                service:
                  name: fanout-service
                  port:
                    number: 3004
            - path: /v1/post/
              pathType: Prefix
              backend:
                service:
                  name: post-service
                  port:
                    number: 3005
            - path: /v1/search/
              pathType: Prefix
              backend:
                service:
                  name: search-service
                  port:
                    number: 3006
            - path: /v1/auth/
              pathType: Prefix
              backend:
                service:
                  name: auth-service
                  port:
                    number: 3007
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: frontend-service
                  port:
                    number: 3000
